Added new sections to the Projects

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   </nav>
 
   <!-- Hero Section -->
-  <header class="bg-primary text-white text-center py-5">
+  <header class="custom-pink text-white text-center py-5">
     <div class="container">
       <h1 class="display-4">Zahra Suleymanova</h1>
-      <p class="lead"> 4th year Honours BSc. in Computer Science with CO-OP student at the University of Ottawa
+      <p class="lead"> 4th year Honours Computer Science with CO-OP student at the University of Ottawa
       </p>
     </div>
   </header>
@@ -45,7 +45,10 @@
       <p>I am a 4th year Computer Science student at the University of Ottawa. Throughout university I have leveraged
         many useful skills such as problem-solving, collaboration, communication and time management. I am proficient in Java, Golang,
         Python, C++, C, HTML/CSS/JS. For programming tools I have experience with Docker, Git, Android Studio,
-        JSON, Eclipse, Visual Studio Code, Microsoft Azure, Visual Studio. Aside from school, I play piano as a hobby for over 10 years.</p>
+        JSON, Microsoft Azure, Visual Studio. I have 1 year of work experience as 
+        a Full Stack Web Developer, 4 months in the private company and 
+        8 months in the government. Aside from school, I play piano as a hobby for over 10 years.
+      </p>
     </div>
   </section>
 
@@ -53,7 +56,17 @@
   <section id="projects" class="bg-light py-5">
     <div class="container">
       <h2>Projects</h2>
-      <!-- Project cards go here -->
+      <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="/images/2176245283.webp" class="card-img-top" alt="Styling Services Website">
+                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                      <h5 class="card-title">Styling Services Website</h5
+                      <a class="btn btn-primary" href="/comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                    </div>
+                </div>
+            </div>
+      </div>
     </div>
   </section>
 
