--- a/index.html
+++ b/index.html
@@ -61,8 +61,41 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/styling_blog_two-models.jpg" class="card-img-top" alt="Styling Services Website">
                     <div class="card-body" style="background-color: rgb(250, 230, 250);">
-                      <h5 class="card-title">Styling Services Website</h5
-                      <a class="btn btn-primary" href="/comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                      <h5 class="card-title">Styling Services Website</h5>
+                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/ChessSet.jpg" class="card-img-top" alt="Game Website">
+                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                      <h5 class="card-title">Game Website</h5>
+                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/785054-ecommerce-istock-020119.jpg" class="card-img-top" alt="E-Commerce Website">
+                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                      <h5 class="card-title">E-Commerce Website</h5>
+                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/sports-tools_53876-138077.jpg" class="card-img-top" alt="Sports Website">
+                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                      <h5 class="card-title">Sports Website</h5>
+                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
                     </div>
                 </div>
             </div>
@@ -75,6 +108,7 @@
     <div class="container">
       <h2>Contact</h2>
       Email: zsule056@uottawa.ca
+      <hr>
       Phone number: +1 123-456-7890
     </div>
   </section>
