--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
     <div class="container">
       <h2>About Me</h2>
       <p>I am a 4th year Computer Science student at the University of Ottawa. Throughout university I have leveraged
-        many useful skills such as problem-solving, collaboration, communication and time management. I am proficient in Java, Golang,
-        Python, C++, C, HTML/CSS/JS. For programming tools I have experience with Docker, Git, Android Studio,
-        JSON, Microsoft Azure, Visual Studio. I have 1 year of work experience as 
-        a Full Stack Web Developer, 4 months in the private company and 
-        8 months in the government. Aside from school, I play piano as a hobby for over 10 years.
+        many useful skills such as problem-solving, collaboration, communication and time management. I have worked as a 
+        Full Stack Web Developer in my previous work terms for a year and I have experience with building/designing websites using
+        ASP .NET Core MVC framework. I have also used .NET Core's Blazor UI framework. Aside from school, I play piano as a hobby for over 10 years.
       </p>
     </div>
   </section>
@@ -58,7 +56,7 @@
       <h2>Projects</h2>
       <div class="row">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/styling_blog_two-models.jpg" class="card-img-top" alt="Styling Services Website">
+                    <img src="images/styling_blog_two-models.jpg" class="uniform-img" alt="Styling Services Website">
                     <div class="card-body" style="background-color: rgb(250, 230, 250);">
                       <h5 class="card-title">Styling Services Website</h5>
                       <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
@@ -66,7 +64,7 @@
                 </div>
      
                 <div class="card" style="width: 18rem;">
-                    <img src="images/ChessSet.jpg" class="card-img-top" alt="Game Website">
+                    <img src="images/ChessSet.jpg" class="uniform-img" alt="Game Website">
                     <div class="card-body" style="background-color: rgb(250, 230, 250);">
                       <h5 class="card-title">Game Website</h5>
                       <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
@@ -74,7 +72,7 @@
                 </div>
     
                 <div class="card" style="width: 18rem;">
-                    <img src="images/785054-ecommerce-istock-020119.jpg" class="card-img-top" alt="E-Commerce Website">
+                    <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img" alt="E-Commerce Website">
                     <div class="card-body" style="background-color: rgb(250, 230, 250);">
                       <h5 class="card-title">E-Commerce Website</h5>
                       <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
@@ -82,7 +80,7 @@
                 </div>
 
                 <div class="card" style="width: 18rem;">
-                    <img src="images/sports-tools_53876-138077.jpg" class="card-img-top" alt="Sports Website">
+                    <img src="images/sports-tools_53876-138077.jpg" class="uniform-img" alt="Sports Website">
                     <div class="card-body" style="background-color: rgb(250, 230, 250);">
                       <h5 class="card-title">Sports Website</h5>
                       <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
