--- a/index.html
+++ b/index.html
@@ -55,35 +55,35 @@
     <div class="container">
       <h2>Projects</h2>
       <div class="row">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="images/styling_blog_two-models.jpg" class="uniform-img" alt="Styling Services Website">
-                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                    <div class="card-body">
                       <h5 class="card-title">Styling Services Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
      
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="images/ChessSet.jpg" class="uniform-img" alt="Game Website">
-                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                    <div class="card-body">
                       <h5 class="card-title">Game Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
     
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img" alt="E-Commerce Website">
-                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                    <div class="card-body">
                       <h5 class="card-title">E-Commerce Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="images/sports-tools_53876-138077.jpg" class="uniform-img" alt="Sports Website">
-                    <div class="card-body" style="background-color: rgb(250, 230, 250);">
+                    <div class="card-body">
                       <h5 class="card-title">Sports Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html" style="background-color: blueviolet;">View Project</a>
+                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
       </div>
