--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="images/styling_blog_two-models.jpg" class="uniform-img" alt="Styling Services Website">
                     <div class="card-body">
                       <h5 class="card-title">Styling Services Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+                      <a class="btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
      
@@ -67,7 +67,7 @@
                     <img src="images/ChessSet.jpg" class="uniform-img" alt="Game Website">
                     <div class="card-body">
                       <h5 class="card-title">Game Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+                      <a class="btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
     
@@ -75,7 +75,7 @@
                     <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img" alt="E-Commerce Website">
                     <div class="card-body">
                       <h5 class="card-title">E-Commerce Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+                      <a class="btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
                     <img src="images/sports-tools_53876-138077.jpg" class="uniform-img" alt="Sports Website">
                     <div class="card-body">
                       <h5 class="card-title">Sports Website</h5>
-                      <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+                      <a class="btn-primary" href="comingSoon.html">View Project</a>
                     </div>
                 </div>
       </div>
