--- a/index.html
+++ b/index.html
@@ -52,43 +52,54 @@
 
   <!-- Projects Section -->
   <section id="projects" class="bg-light py-5">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="row">
-                <div class="card">
-                    <img src="images/styling_blog_two-models.jpg" class="uniform-img" alt="Styling Services Website">
-                    <div class="card-body">
-                      <h5 class="card-title">Styling Services Website</h5>
-                      <a class="btn-primary" href="comingSoon.html">View Project</a>
-                    </div>
-                </div>
-     
-                <div class="card">
-                    <img src="images/ChessSet.jpg" class="uniform-img" alt="Game Website">
-                    <div class="card-body">
-                      <h5 class="card-title">Game Website</h5>
-                      <a class="btn-primary" href="comingSoon.html">View Project</a>
-                    </div>
-                </div>
-    
-                <div class="card">
-                    <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img" alt="E-Commerce Website">
-                    <div class="card-body">
-                      <h5 class="card-title">E-Commerce Website</h5>
-                      <a class="btn-primary" href="comingSoon.html">View Project</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="images/sports-tools_53876-138077.jpg" class="uniform-img" alt="Sports Website">
-                    <div class="card-body">
-                      <h5 class="card-title">Sports Website</h5>
-                      <a class="btn-primary" href="comingSoon.html">View Project</a>
-                    </div>
-                </div>
+  <div class="container">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+     <h2>Projects</h2>
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/styling_blog_two-models.jpg" class="uniform-img card-img-top" alt="Styling Services Website">
+        <div class="card-body">
+          <h5 class="card-title">Styling Services Website</h5>
+          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+        </div>
       </div>
     </div>
-  </section>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/ChessSet.jpg" class="uniform-img card-img-top" alt="Game Website">
+        <div class="card-body">
+          <h5 class="card-title">Game Website</h5>
+          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img card-img-top" alt="E-Commerce Website">
+        <div class="card-body">
+          <h5 class="card-title">E-Commerce Website</h5>
+          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/sports-tools_53876-138077.jpg" class="uniform-img card-img-top" alt="Sports Website">
+        <div class="card-body">
+          <h5 class="card-title">Sports Website</h5>
+          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+</section>
 
   <!-- Contact Section -->
   <section id="contact" class="py-5">
