--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="images/styling_blog_two-models.jpg" class="uniform-img card-img-top" alt="Styling Services Website">
         <div class="card-body">
           <h5 class="card-title">Styling Services Website</h5>
-          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <img src="images/ChessSet.jpg" class="uniform-img card-img-top" alt="Game Website">
         <div class="card-body">
           <h5 class="card-title">Game Website</h5>
-          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
         <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img card-img-top" alt="E-Commerce Website">
         <div class="card-body">
           <h5 class="card-title">E-Commerce Website</h5>
-          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
@@ -91,7 +91,7 @@
         <img src="images/sports-tools_53876-138077.jpg" class="uniform-img card-img-top" alt="Sports Website">
         <div class="card-body">
           <h5 class="card-title">Sports Website</h5>
-          <a class="btn btn-primary" href="comingSoon.html">View Project</a>
+          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
