--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <section id="projects" class="bg-light py-5">
   <div class="container">
        <h2>Projects</h2>
+       <br>
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
   
     <div class="col">
@@ -61,7 +62,7 @@
         <img src="images/styling_blog_two-models.jpg" class="uniform-img card-img-top" alt="Styling Services Website">
         <div class="card-body">
           <h5 class="card-title">Styling Services Website</h5>
-          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
+          <a class="btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
@@ -71,7 +72,7 @@
         <img src="images/ChessSet.jpg" class="uniform-img card-img-top" alt="Game Website">
         <div class="card-body">
           <h5 class="card-title">Game Website</h5>
-          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
+          <a class="btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
@@ -81,7 +82,7 @@
         <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img card-img-top" alt="E-Commerce Website">
         <div class="card-body">
           <h5 class="card-title">E-Commerce Website</h5>
-          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
+          <a class="btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
@@ -91,7 +92,7 @@
         <img src="images/sports-tools_53876-138077.jpg" class="uniform-img card-img-top" alt="Sports Website">
         <div class="card-body">
           <h5 class="card-title">Sports Website</h5>
-          <a class="btn btn-pink" href="comingSoon.html">View Project</a>
+          <a class="btn-pink" href="comingSoon.html">View Project</a>
         </div>
       </div>
     </div>
