--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Opening Section -->
   <header class="custom-pink text-white text-center py-5">
     <div class="container">
       <h1 class="display-4">Zahra Suleymanova</h1>
@@ -107,7 +107,9 @@
   <section id="contact" class="py-5">
     <div class="container">
       <h2>Contact</h2>
-      Email: zsule056@uottawa.ca
+      School Email: zsule056@uottawa.ca
+      <br>
+      Personal Email: zahrasnva@gmail.com
       <hr>
       Phone number: +1 123-456-7890
     </div>
