--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <img src="images/ChessSet.jpg" class="uniform-img card-img-top" alt="Game Website">
         <div class="card-body">
           <h5 class="card-title">Game Website</h5>
-          <a class="my-btn-pink" href="comingSoon.html">View Project</a>
+          <a class="my-btn-pink" href="https://zahra46031.github.io/coco-styling/">View Project</a>
         </div>
       </div>
     </div>
