memory game website link added

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
     <div class="col">
       <div class="card h-150">
-        <img src="images/ChessSet.jpg" class="uniform-img card-img-top" alt="Game Website">
+        <img src="images/cover-image.jpg" class="uniform-img card-img-top" alt="Game Website">
         <div class="card-body">
-          <h5 class="card-title">Game Website</h5>
-          <a class="my-btn-pink" href="comingSoon.html">View Project</a>
+          <h5 class="card-title">Memory Game Website</h5>
+          <a class="my-btn-pink" href="https://zahra46031.github.io/memory-game/">View Project</a>
         </div>
       </div>
     </div>
