--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img card-img-top" alt="E-Commerce Website">
         <div class="card-body">
           <h5 class="card-title">E-Commerce Website</h5>
-          <a class="my-btn-pink" href="comingSoon.html">View Project</a>
+          <a class="my-btn-pink" href="https://zahra46031.github.io/e-commerce/">View Project</a>
         </div>
       </div>
     </div>
