uni enrollment dashboard section updated

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
     <div class="col">
       <div class="card h-150">
-        <img src="images/sports-tools_53876-138077.jpg" class="uniform-img card-img-top" alt="Sports Website">
+        <img src="images/Healy-Hall-Georgetown-University-Washington-DC.webp" class="uniform-img card-img-top" alt="Sports Website">
         <div class="card-body">
-          <h5 class="card-title">Sports Website</h5>
-          <a class="my-btn-pink" href="comingSoon.html">View Project</a>
+          <h5 class="card-title">University Enrollment Dashboard</h5>
+          <a class="my-btn-pink" href="https://zahra46031.github.io/university-dashboard/">View Project</a>
         </div>
       </div>
     </div>
