--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
     <div class="col">
       <div class="card h-150">
-        <img src="images/styling_blog_two-models.jpg" class="uniform-img card-img-top" alt="Styling Services Website">
+        <img src="images/Screenshot 2025-07-20 172608.png" class="uniform-img card-img-top" alt="Styling Services Website">
         <div class="card-body">
           <h5 class="card-title">Styling Services Website</h5>
           <a class="my-btn-pink" href="https://zahra46031.github.io/coco-styling/">View Project</a>
@@ -69,7 +69,7 @@
 
     <div class="col">
       <div class="card h-150">
-        <img src="images/cover-image.jpg" class="uniform-img card-img-top" alt="Game Website">
+        <img src="images/Screenshot 2025-07-20 172620.png" class="uniform-img card-img-top" alt="Game Website">
         <div class="card-body">
           <h5 class="card-title">Memory Game Website</h5>
           <a class="my-btn-pink" href="https://zahra46031.github.io/memory-game/">View Project</a>
@@ -79,7 +79,7 @@
 
     <div class="col">
       <div class="card h-150">
-        <img src="images/785054-ecommerce-istock-020119.jpg" class="uniform-img card-img-top" alt="E-Commerce Website">
+        <img src="images/Screenshot 2025-07-20 172630.png" class="uniform-img card-img-top" alt="E-Commerce Website">
         <div class="card-body">
           <h5 class="card-title">E-Commerce Website</h5>
           <a class="my-btn-pink" href="https://zahra46031.github.io/e-commerce/">View Project</a>
@@ -89,7 +89,7 @@
 
     <div class="col">
       <div class="card h-150">
-        <img src="images/Healy-Hall-Georgetown-University-Washington-DC.webp" class="uniform-img card-img-top" alt="Sports Website">
+        <img src="images/Screenshot 2025-07-20 172550.png" class="uniform-img card-img-top" alt="Sports Website">
         <div class="card-body">
           <h5 class="card-title">University Enrollment Dashboard</h5>
           <a class="my-btn-pink" href="https://zahra46031.github.io/university-dashboard/">View Project</a>
